# starcraft_game

starcraft/: CMakeLists.txt
starcraft/cmake_helpers/: helpers_c.cmake
starcraft/includes/: AirShipBase.h  AirShipWithShield.h  BattleCruiser.h  BattleField.h  Carrier.h  Defines.h  Phoenix.h  Protoss.h  Terran.h  Viking.h
starcraft/src/: BattleField.cpp  main.cpp
starcraft/src/AirShips/: AirShipBase.cpp  AirShipWithShield.cpp
starcraft/src/AirShips/ProtossShips/: Carrier.cpp  Phoenix.cpp
starcraft/src/AirShips/TerranShips/: BattleCruiser.cpp  Viking.cpp
starcraft/src/Races/Protoss/: Protoss.cpp
starcraft/src/Races/Terran/: Terran.cpp
starcraft/tests/real/: test.001.in.txt  test.001.out.txt  test.002.in.txt  test.002.out.txt  test.003.in.txt  test.003.out.txt  test.004.in.txt  test.004.out.txt  test.005.in.txt  test.005.out.txt  test.006.in.txt  test.006.out.txt  test.007.in.txt  test.007.out.txt  test.008.in.txt  test.008.out.txt  test.009.in.txt  test.009.out.txt  test.010.in.txt  test.010.out.txt
starcraft/tests/sample/: test.000.001.in.txt  test.000.001.out.txt  test.000.002.out.txt  test.000.003.in.txt  test.000.003.out.txt
